Change navbar and auth.js minor changes

--- a/backend/views/partials/nav.hbs
+++ b/backend/views/partials/nav.hbs
@@ -8,6 +8,7 @@
             <a href="/pdfs/shared">Shared PDFs</a>
             <a href="/pdfs/add">Add PDF</a>
             <a href="/chat">Chat</a>
+            <a href="/profile">Profile</a>
             {{#if user}}
                  <a href="/logout">Logout</a>
             {{else}}
