--- a/backend/views/viewPdf.hbs
+++ b/backend/views/viewPdf.hbs
@@ -33,7 +33,7 @@
 
     <form action="/pdfs/comment/{{pdf.id}}" method="POST" class="comment-form">
         <div class="form-group">
-            <label for="comment_text">Add a comment (Markdown supported)</label>
+            <label for="comment_text">Add a comment </label>
             <textarea id="comment_text" name="comment_text" rows="3" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
