change from username to  display_name

--- a/backend/views/addPdf.hbs
+++ b/backend/views/addPdf.hbs
@@ -30,4 +30,5 @@
             <button type="submit" class="btn btn-primary">Add PDF</button>
         </form>
     </section>
+        <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
 </div>
