--- a/backend/views/chat.hbs
+++ b/backend/views/chat.hbs
@@ -9,6 +9,8 @@
             </div>
         </form>
     </div>
+        <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
+    
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
