--- a/backend/views/sharedPdfs.hbs
+++ b/backend/views/sharedPdfs.hbs
@@ -21,9 +21,11 @@
                 </div>
             {{/each}}
         </div>
+        <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
     {{else}}
         <div class="empty-state text-center">
             <p>No shared PDFs found.</p>
         </div>
+        <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
     {{/if}}
 </div>
