--- a/backend/views/profile.hbs
+++ b/backend/views/profile.hbs
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="color">Color</label>
-                <input type="text" id="color" name="color" value="{{color}}">
+                <input type="text" id="color" name="color" value="{{color}}" placeholder="{{color}}">
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
