--- a/backend/views/viewPdfs.hbs
+++ b/backend/views/viewPdfs.hbs
@@ -31,10 +31,12 @@
                 </div>
             {{/each}}
         </div>
+        <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
     {{else}}
         <div class="empty-state text-center">
             <p>No PDFs found in your library.</p>
             <a href="/pdfs/add" class="btn btn-primary mt-2">Add your first PDF</a>
         </div>
+        <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
     {{/if}}
 </div>
