--- a/backend/views/sharedPdfs.hbs
+++ b/backend/views/sharedPdfs.hbs
@@ -21,6 +21,9 @@
                 </div>
             {{/each}}
         </div>
+
+        {{> pagination}}
+
         <a href="/" class="btn btn-secondary mt-2">Back to Home</a>
     {{else}}
         <div class="empty-state text-center">
