--- a/backend/views/forgot-password.hbs
+++ b/backend/views/forgot-password.hbs
@@ -7,12 +7,12 @@
     {{#if success}}
         <div class="alert alert-success">{{success}}</div>
     {{/if}}
-    <form action="/auth/forgot-password" method="POST">
+    <form action="/forgot-password" method="POST">
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" name="email" required>
         </div>
         <button type="submit" class="btn btn-primary">Send Reset Link</button>
     </form>
-    <p class="mt-3">Remember your password? <a href="/auth/login">Login here</a>.</p>
+    <p class="mt-3">Remember your password? <a href="/login">Login here</a>.</p>
 </div>
