--- a/backend/views/login.hbs
+++ b/backend/views/login.hbs
@@ -14,5 +14,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    <p class="mt-2 text-center"><a href="/forgot-password">Forgot Password?</a></p>
     <p class="mt-2 text-center">Don't have an account? <a href="/register">Register here</a>.</p>
 </div>
