--- a/backend/views/reset-password.hbs
+++ b/backend/views/reset-password.hbs
@@ -3,7 +3,7 @@
     {{#if error}}
         <div class="alert alert-danger">{{error}}</div>
     {{/if}}
-    <form action="/auth/reset-password/{{token}}" method="POST">
+    <form action="/reset-password/{{token}}" method="POST">
         <div class="mb-3">
             <label for="password" class="form-label">New Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
